[Add] Animation stay-fix, blade deactivation API, recovery conditions, trash clear (#254)
* Add: Main menu scene and camera animation pipeline (#233)

Introduces the btm.sword.system.scene package with CameraController
abstract base (single-owner enforcement via SwordPlayer field),
GentleDriftCameraController for the main menu scene (sinusoidal bob +
yaw drift, HudDisplayGroup displays), BezierCameraController for
cutscenes (follows CameraPath over configurable tick duration),
SceneManager (music loop + scene-viewer tracking), and supporting
utilities. Hooks into SwordPlayer.onSpawn, InputListener Shift gate,
and PlayerListener forced-spectator-exit. Config.Scene added with all
defaults. AvatarDisplay stub included.

* Add: Packet-driven camera system (ClientboundSetCameraPacket)

Introduces PacketAdapter (NMS reflection layer), CameraSession (active
attachment state), and CameraService (static attach/detach API).
Refactors BezierCameraController and GentleDriftCameraController to use
CameraService.attach() instead of spectator-mode targeting — player
stays in their original game mode. Both controllers retain a spectator
fallback if PacketAdapter reflection fails at runtime.

* Fix: Switch PacketAdapter to ProtocolLib; pin Gradle daemon to Java 21

Replaces NMS reflection in PacketAdapter with ProtocolLib's
PacketContainer API (PacketType.Play.Server.CAMERA, getIntegers().write).
Swaps compileOnly fileTree for net.dmulloy2:ProtocolLib:5.4.0 from
Maven Central. Pins org.gradle.java.home to JDK 21 in gradle.properties
so Gradle 8.8 runs under Java 21 regardless of the system JAVA_HOME.

* Refactor: Make ParticleWrapper fields supplier-based for runtime configurability (#234)

Replace fixed-value fields with Supplier<T> equivalents so values are resolved
at display time, enabling config hot-reload and runtime-driven particle behavior.
Introduces fluent with*() methods (withSpeed, withOptions, withTransition,
withBlockData) to avoid Java type-erasure clashes with generi