@@ -1,18 +1,17 @@
 package btm.sword.system.inventory.menu;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.bukkit.Material;
 import org.bukkit.entity.Player;
 
 import btm.sword.config.Config;
-import btm.sword.utility.ChatInputCapture;
 import btm.sword.system.entity.impl.SwordPlayer;
 import btm.sword.system.inventory.item.ConfigEntryItem;
 import btm.sword.system.inventory.item.ForwardItem;
 import btm.sword.system.inventory.item.PreviousItem;
 import btm.sword.system.item.ItemStackBuilder;
+import btm.sword.utility.ChatInputCapture;
 import net.kyori.adventure.text.Component;
 import net.kyori.adventure.text.format.NamedTextColor;
 import xyz.xenondevs.invui.gui.PagedGui;
@@ -61,7 +60,7 @@ public class ConfigSectionMenu extends Menu {
         List<Config.ConfigEntry<?>> displayed = filter == null ? entries
             : entries.stream()
                 .filter(e -> e.path.toLowerCase().contains(filter))
-                .collect(Collectors.toList());
+                .toList();
 
         List<Item> entryItems = displayed.stream()
             .map(entry -> (Item) new ConfigEntryItem(entry, swordPlayer, this::open))
